--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "mongodb": "^3.5.9",
     "next": "latest",
+    "next-session": "^3.3.2",
+    "passport": "^0.4.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.3.8-beta.2",
+    "validator": "^13.1.17"
   },
   "license": "MIT"
 }
